--- a/Simple Django client/templates/plugIt/api.html
+++ b/Simple Django client/templates/plugIt/api.html
@@ -15,8 +15,11 @@
 	{% endblocktrans %}
 
 	<h3>/user/&lt;id&gt;</h3>
+	<small><i>PlugItAPI.get_user(pk)</i></small><br />
 
 	Return information about an user.
+
+
 
 
 {% endblock %}
