API: Added orga

--- a/Simple Django client/templates/plugIt/api.html
+++ b/Simple Django client/templates/plugIt/api.html
@@ -20,6 +20,10 @@
 	Return information about an user.
 
 
+	<h3>/orga/&lt;id&gt;</h3>
+	<small><i>PlugItAPI.get_orga(pk)</i></small><br />
+
+	Return information about an organization.
 
 
 {% endblock %}
