--- a/Simple Django client/templates/plugIt/base.html
+++ b/Simple Django client/templates/plugIt/base.html
@@ -49,18 +49,38 @@
 
                             <a class="brand" href="{{ebuio_baseUrl}}">PlugIt - Standalone mode</a>
 
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    {% trans "User" %}
-                                    <b class="caret"></b>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li {% if ebuio_userMode == 'ano' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('ano');">{% trans "Anonymous user" %}</a></li>
-                                    <li {% if ebuio_userMode == 'log' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('log');">{% trans "Logged in user" %}</a></li>
-                                    <li {% if ebuio_userMode == 'mem' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('mem');">{% trans "Project member" %}</a></li>
-                                    <li {% if ebuio_userMode == 'adm' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('adm');">{% trans "Admin user" %}</a></li>
-                                </ul>
-                            </li>
+                            {% if ebuio_realUsers %}
+
+                                 <li>
+                                        {% if ebuio_u.username %}
+                                           <a href="{%url 'django.contrib.auth.views.logout' %}"> Welcome {{ebuio_u.username}}. Logout ?</a>
+                                        {% else %}
+                                            <a href="{%url 'django.contrib.auth.views.login' %}"> Not logged. Login ?</a>
+                                        {% endif %}
+                                    </a>
+
+                                </li>
+
+                                <li>
+                                    <a href="/admin/">Admin</a>
+                                </li>
+
+                            {% else %}
+
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                        {% trans "User" %}
+                                        <b class="caret"></b>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li {% if ebuio_userMode == 'ano' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('ano');">{% trans "Anonymous user" %}</a></li>
+                                        <li {% if ebuio_userMode == 'log' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('log');">{% trans "Logged in user" %}</a></li>
+                                        <li {% if ebuio_userMode == 'mem' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('mem');">{% trans "Project member" %}</a></li>
+                                        <li {% if ebuio_userMode == 'adm' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('adm');">{% trans "Admin user" %}</a></li>
+                                    </ul>
+                                </li>
+
+                            {% endif %}
 
                             {% if ebuio_orgamode %}
                                 <li class="dropdown">
