--- a/Simple Django client/templates/plugIt/api.html
+++ b/Simple Django client/templates/plugIt/api.html
@@ -25,5 +25,10 @@
 
 	Return information about an organization.
 
+	<h3>/members/</h3>
+	<small><i>PlugItAPI.get_project_members()</i></small><br />
+
+	Return the list of members in the project.
+
 
 {% endblock %}
