--- a/Simple Django client/templates/plugIt/404.html
+++ b/Simple Django client/templates/plugIt/404.html
@@ -10,7 +10,7 @@
 
 	<p>
 		{% blocktrans with reason as reason %}
-			This page dosen't exist. Internal reason. {{reason}}
+			This page doesn't exist. Internal reason. {{reason}}
 		{% endblocktrans %}
 	</p>
 
