--- a/Simple Django client/templates/plugIt/api.html
+++ b/Simple Django client/templates/plugIt/api.html
@@ -30,5 +30,10 @@
 
 	Return the list of members in the project.
 
+	<h3>/mail/</h3>
+	<small><i>PlugItAPI.send_mail(sender, subject, recipients, message, response_id=None)</i></small><br />
+
+	Send a mail with given parameters. If response_id is set, the sender email will be set by the system and recipents replies will be send back to the PlugIt server.
+
 
 {% endblock %}
