--- a/Simple Django client/templates/plugIt/base.html
+++ b/Simple Django client/templates/plugIt/base.html
@@ -100,6 +100,7 @@
 
                           <ul class="nav pull-right">
                             <li><a href="http://ebu.io" class="text-info">About Ebu.io</a></li>
+                            <!-- TODO this link is broken -->
                             <li><a href="http://ebu.io/plugit" class="text-info">About PlugIt</a></li>
                           </ul>
                         </div>
