--- a/Simple Flask server/templates/home.html
+++ b/Simple Flask server/templates/home.html
@@ -14,9 +14,12 @@
 	<table class="table table-striped table-bordered  table-condensed">
 		<thead>
 			<tr><th>Name</th></tr>
+        </thead>
+        <tbody>
 		{% for p in polls %}
 			<tr><td><a href="{{ebuio_baseUrl}}show/{{p.id}}">{{p.name}}</a></td></tr>
 		{% endfor %}
+        </tbody>
 	</table>
 
 	{% if ebuio_u.ebuio_member %}
