Better plugit architecture from io-enc

--- a/Simple Flask server/templates/create.html
+++ b/Simple Flask server/templates/create.html
@@ -71,7 +71,7 @@
 
             <div class="control-group" id="add-row-before-this">
                 <div class="controls">
-                    <button class="btn" type="button" style="margin-left: 170px;" onclick="addRow();"><i class="icon-plus"></i></button>
+                    <button class="btn btn-default" type="button" style="margin-left: 170px;" onclick="addRow();"><i class="icon-plus"></i></button>
                 </div>
             </div>
 
