--- a/Simple Flask server/templates/show.html
+++ b/Simple Flask server/templates/show.html
@@ -97,7 +97,7 @@
 
 	{% endif %}
 
-	<a class="btn" style="float: right;" href="{{ebuio_baseUrl}}">Return to the list</a>
+	<a class="btn btn-default" style="float: right;" href="{{ebuio_baseUrl}}">Return to the list</a>
 
 {% endblock %}
 
