Updated plugit with last changes form EBUio: * Improved mail system * ProxyMode * Sessions * Rewrote main plugit function

--- a/Simple Django client/templates/plugIt/base.html
+++ b/Simple Django client/templates/plugIt/base.html
@@ -108,8 +108,7 @@
                     </div><!-- /.navbar -->
                 </div>
 
-                {% block content %}
-
+                {% block content %}{{plugit_content|safe}}
                 {% endblock %}
 
                 <hr />
