Api call to get list of orgas

--- a/Simple Django client/templates/plugIt/api.html
+++ b/Simple Django client/templates/plugIt/api.html
@@ -19,6 +19,10 @@
 
 	Return information about an user.
 
+	<h3>/orgas/</h3>
+	<small><i>PlugItAPI.get_orgas(pk)</i></small><br />
+
+	Return the list of pk for all organizations.
 
 	<h3>/orga/&lt;id&gt;</h3>
 	<small><i>PlugItAPI.get_orga(pk)</i></small><br />
