Added name of the orga

--- a/Simple Django client/templates/plugIt/api.html
+++ b/Simple Django client/templates/plugIt/api.html
@@ -22,7 +22,7 @@
 	<h3>/orgas/</h3>
 	<small><i>PlugItAPI.get_orgas(pk)</i></small><br />
 
-	Return the list of pk for all organizations.
+	Return the list of pk/name for all organizations.
 
 	<h3>/orga/&lt;id&gt;</h3>
 	<small><i>PlugItAPI.get_orga(pk)</i></small><br />
