--- a/Simple Django client/templates/plugIt/base.html
+++ b/Simple Django client/templates/plugIt/base.html
@@ -27,21 +27,31 @@
 
                 }
 
-                 function ebuio_setOrga(name, pk) {
+                function ebuio_setOrga(name, pk) {
 
                     $.ajax({
                         url: "{{ebuio_baseUrl}}ebuio_setOrga?name=" + name + "&pk=" + pk,
                     }).done(function() {
                          location.reload();
                     });
-
+                    
                 }
+                
+                function ebuio_setOrga1(orga_pk) {
+
+                    $.ajax({
+                        url: "{{ebuio_baseUrl}}ebuio_setOrga?orga=" + orga_pk,
+                    }).done(function() {
+                         location.reload();
+                    });
+                    
+                }
+                 
+                 
             </script>
 
             <div class="container">
-
                 <div class="masthead">
-                    
                     <div class="navbar">
                       <div class="navbar-inner">
                         <div class="container">
@@ -89,10 +99,16 @@
                                         <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu">
+                                    	{% if ebuio_orgas %}
+                                    		{% for orga in ebuio_orgas %}
+                                    		<li {% if ebuio_orga.pk == orga.pk %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga1('{{orga.pk}}');">{{orga.name}}</a></li>
+                                    		{% endfor %}
+                                    	{% else %}
                                         <li {% if ebuio_orga.pk == '-1' %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga('EBU', '-1');">{% trans "EBU" %}</a></li>
                                         <li {% if ebuio_orga.pk == '-2' %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga('RTS', '-2');">{% trans "RTS" %}</a></li>
                                         <li {% if ebuio_orga.pk == '-3' %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga('BBC', '-3');">{% trans "BBC" %}</a></li>
                                         <li {% if ebuio_orga.pk == '-4' %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga('CNN', '-4');">{% trans "CNN" %}</a></li>
+                                        {% endif %}
                                     </ul>
                                 </li>
                             {% endif %}
