fixed urls for non standalone mode

--- a/Simple Django client/templates/plugIt/base.html
+++ b/Simple Django client/templates/plugIt/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>{% block title %}{% endblock %} :: PlugIt -Standalone mode</title>
+            <title>{% block title %}{% endblock %}</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
             <link href="/media/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -57,7 +57,7 @@
                         <div class="container">
                           <ul class="nav">
 
-                            <a class="brand" href="{{ebuio_baseUrl}}">PlugIt - Standalone mode</a>
+                            <a class="brand" href="{{ebuio_baseUrl}}">PlugIt</a>
 
                             {% if ebuio_realUsers %}
 
