--- a/Simple Django client/templates/plugIt/404.html
+++ b/Simple Django client/templates/plugIt/404.html
@@ -1,4 +1,4 @@
-{% extends "plugIt/base.html" %}
+{% extends "plugIt/plugItBase.html" %}
 {% load i18n %}
 
 {% block title %}
@@ -9,7 +9,7 @@
 	<h1>{% trans "404 Error" %}</h1>
 
 	<p>
-		{% blocktrans with reason as reason %}
+		{% blocktrans with context.reason as reason %}
 			This page doesn't exist. Internal reason. {{reason}}
 		{% endblocktrans %}
 	</p>
