--- a/Simple Django client/templates/plugIt/base.html
+++ b/Simple Django client/templates/plugIt/base.html
@@ -1,123 +1,8 @@
-{% load i18n %}
-<!DOCTYPE html>
-    <html>
-        <head>
-            <title>{% block title %}{% endblock %} :: PlugIt -Standalone mode</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% block pretitle %}
 
-            <link href="/media/css/bootstrap.min.css" rel="stylesheet" media="screen">
-            <link href="/media/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-            <script src="/media/js/jquery-1.10.1.min.js"></script>
-            <script src="/media/js/bootstrap.min.js"></script>
+{% endblock %}
 
-            <link href="/media/css/plugIt-standalone.css" rel="stylesheet" media="screen">
-            
 
-        </head>
-        <body>
 
-            <script type="text/javascript">
-                function ebuio_setUser(mode) {
-
-                    $.ajax({
-                        url: "{{ebuio_baseUrl}}ebuio_setUser?mode=" + mode,
-                    }).done(function() {
-                         location.reload();
-                    });
-
-                }
-
-                 function ebuio_setOrga(name, pk) {
-
-                    $.ajax({
-                        url: "{{ebuio_baseUrl}}ebuio_setOrga?name=" + name + "&pk=" + pk,
-                    }).done(function() {
-                         location.reload();
-                    });
-
-                }
-            </script>
-
-            <div class="container">
-
-                <div class="masthead">
-                    
-                    <div class="navbar">
-                      <div class="navbar-inner">
-                        <div class="container">
-                          <ul class="nav">
-
-                            <a class="brand" href="{{ebuio_baseUrl}}">PlugIt - Standalone mode</a>
-
-                            {% if ebuio_realUsers %}
-
-                                 <li>
-                                        {% if ebuio_u.username %}
-                                           <a href="{%url 'django.contrib.auth.views.logout' %}"> Welcome {{ebuio_u.username}}. Logout ?</a>
-                                        {% else %}
-                                            <a href="{%url 'django.contrib.auth.views.login' %}"> Not logged. Login ?</a>
-                                        {% endif %}
-                                    </a>
-
-                                </li>
-
-                                <li>
-                                    <a href="/admin/">Admin</a>
-                                </li>
-
-                            {% else %}
-
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        {% trans "User" %}
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li {% if ebuio_userMode == 'ano' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('ano');">{% trans "Anonymous user" %}</a></li>
-                                        <li {% if ebuio_userMode == 'log' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('log');">{% trans "Logged in user" %}</a></li>
-                                        <li {% if ebuio_userMode == 'mem' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('mem');">{% trans "Project member" %}</a></li>
-                                        <li {% if ebuio_userMode == 'adm' %}class="active"{% endif %}><a href="#" onclick="ebuio_setUser('adm');">{% trans "Admin user" %}</a></li>
-                                    </ul>
-                                </li>
-
-                            {% endif %}
-
-                            {% if ebuio_orgamode %}
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        {% trans "Organization" %}
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li {% if ebuio_orga.pk == '-1' %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga('EBU', '-1');">{% trans "EBU" %}</a></li>
-                                        <li {% if ebuio_orga.pk == '-2' %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga('RTS', '-2');">{% trans "RTS" %}</a></li>
-                                        <li {% if ebuio_orga.pk == '-3' %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga('BBC', '-3');">{% trans "BBC" %}</a></li>
-                                        <li {% if ebuio_orga.pk == '-4' %}class="active"{% endif %}><a href="#" onclick="ebuio_setOrga('CNN', '-4');">{% trans "CNN" %}</a></li>
-                                    </ul>
-                                </li>
-                            {% endif %}
-                          </ul>
-
-                          <ul class="nav pull-right">
-                            <li><a href="http://ebu.io" class="text-info">About Ebu.io</a></li>
-                            <!-- TODO this link is broken -->
-                            <li><a href="http://ebu.io/plugit" class="text-info">About PlugIt</a></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div><!-- /.navbar -->
-                </div>
-
-                {% block content %}{{plugit_content|safe}}
-                {% endblock %}
-
-                <hr />
-
-                <div class="footer">
-                    <p>&copy; Ebu 2013</p>
-                </div>
-
-            </div>
-
-        </body>
-    </html>
+{% block content %}
+{% endblock %}
