--- a/examples/simple_server/templates/create.html
+++ b/examples/simple_server/templates/create.html
@@ -2,86 +2,91 @@
 
 {% block title %}Create :: SimplePools{% endblock %}
 
-{% block content %} 
+{% block content %}
     <h2>SimplePolls: New poll</h2>
 
     <p class="well well-small">
-        You can here create a new poll with different options. This page is only accesible if you are a member or an admin. Try to change the current user with the menu !
+        You can here create a new poll with different options. This page is only accesible if you are a member or an
+        admin. Try to change the current user with the menu !
     </p>
 
     {% if success %}
 
         <div class="alert alert-success">
-            The poll has been successfully saved. You can <a href="{{ebuio_baseUrl}}show/{{id}}">show it</a>, <a href="{{ebuio_baseUrl}}create/">create a new one</a> or <a href="{{ebuio_baseUrl}}">return to the list</a>.
+            The poll has been successfully saved. You can <a href="{{ ebuio_baseUrl }}show/{{ id }}">show it</a>, <a
+                href="{{ ebuio_baseUrl }}create/">create a new one</a> or <a href="{{ ebuio_baseUrl }}">return to the
+            list</a>.
         </div>
 
     {% else %}
 
         <form action="" method="POST" class="form-horizontal">
-            {% csrf_token %}
 
-            {% if errors %}
-                <div class="alert alert-error">
-                    <b>There is at least one error. Please fix the problem and submit again the form.</b><br />
-                    <ul>
-                        {% for e in errors %}
-                            <li>{{e}}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            {% endif %}
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
 
+                    {% csrf_token %}
 
-            <h4>Informations</h4>
+                    {% if errors %}
+                        <div class="alert alert-error">
+                            <b>There is at least one error. Please fix the problem and submit again the form.</b><br/>
+                            <ul>
+                                {% for e in errors %}
+                                    <li>{{ e }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    {% endif %}
 
-            <div class="control-group">
-                <label class="control-label" for="title">Title</label>
-                <div class="controls">
-                    <input type="text" name="title" placeholder="Title" value="{{title}}">
-                </div>
-            </div>
+                    <div class="form-group">
+                        <label class="control-label" for="title">Title</label>
+                        <input type="text" name="title" class="form-control" placeholder="Title" value="{{ title }}">
+                    </div>
 
-            <div class="control-group">
-                <label class="control-label" for="title">Description</label>
-                <div class="controls">
-                    <textarea name="description" placeholder="Description">{{description}}</textarea>
-                </div>
-            </div>
+                    <div class="form-group">
+                        <label class="control-label" for="title">Description</label>
+                        <textarea name="description" class="form-control"
+                                  placeholder="Description">{{ description }}</textarea>
+                    </div>
 
-            <h4>Responses</h4>
+                    <div class="form-group">
+                        <h4>Responses</h4>
+                    </div>
 
-            {% for rep in listOfResponses %}
-                <div class="control-group">
-                    <div class="controls">
-                        <div class="input-append">
-                            <input class="span2" name="rep[]" type="text" value="{{rep}}">
-                            <button class="btn btn-danger" type="button" onclick="$(this).parent().parent().parent().remove();"><i class="icon-remove"></i></button>
+                    {% for rep in listOfResponses %}
+                        <div class="form-inline">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input class="form-control" name="rep[]" type="text" value="{{ rep }}">
+                                </div>
+                                <button class="btn btn-xs btn-danger" type="button"
+                                        onclick="$(this).parent().parent().remove();"><i
+                                        class="glyphicon glyphicon-remove"></i></button>
+                            </div>
+                        </div>
+                    {% endfor %}
+
+                    <script type="text/javascript">
+                        function addRow() {
+
+                            $('#add-row-before-this').before('<div class="form-inline"><div class="form-group"><div class="input-group"><input class="form-control" name="rep[]" type="text" value="{{rep}}"> </div> <button class="btn btn-xs btn-danger" type="button" onclick="$(this).parent().parent().remove();"><i class="glyphicon glyphicon-remove"></i></button> </div> </div>');
+
+                        }
+                    </script>
+
+                    <div class="form-group" id="add-row-before-this">
+                        <div class="input-group">
+                            <button class="btn btn-default" type="button" style="margin-left: 170px;"
+                                    onclick="addRow();"><i class="glyphicon glyphicon-plus"></i></button>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
 
-            <script type="text/javascript">
-                function addRow() {
-
-                    $('#add-row-before-this').before('<div class="control-group"><div class="controls"><div class="input-append"><input class="span2" name="rep[]" type="text" value="{{rep}}"><button class="btn btn-danger" type="button" onclick="$(this).parent().parent().parent().remove();"><i class="icon-remove"></i></button></div></div></div>');
-
-                }
-            </script>
-
-            <div class="control-group" id="add-row-before-this">
-                <div class="controls">
-                    <button class="btn btn-default" type="button" style="margin-left: 170px;" onclick="addRow();"><i class="icon-plus"></i></button>
+                    <input class="btn btn-warning" style="float: right; margin-left: 5px;" value="Cancel" type="button"
+                           onclick="window.location='{{ ebuio_baseUrl }}';">
+                    <input type="submit" class="btn btn-primary" style="float: right;" value="Save">
                 </div>
             </div>
-
-            <input class="btn btn-warning" style="float: right; margin-left: 5px;" value="Cancel" type="button" onclick="window.location='{{ebuio_baseUrl}}';">
-            <input type="submit" class="btn btn-primary" style="float: right;" value="Save">
-
-
         </form>
     {% endif %}
-
-
 {% endblock %}
 
