Tooltip by default, like on ebu.io

--- a/examples/standalone_proxy/plugIt/templates/plugIt/plugItBase-common.html
+++ b/examples/standalone_proxy/plugIt/templates/plugIt/plugItBase-common.html
@@ -140,5 +140,8 @@
                 </div>
             </div>
         {% endblock %}
+        <script type="text/javascript">
+            $('[data-toggle="tooltip"]').tooltip();
+        </script>
     </body>
 </html>
