--- a/examples/standalone_proxy/plugIt/templates/plugIt/api.html
+++ b/examples/standalone_proxy/plugIt/templates/plugIt/api.html
@@ -20,38 +20,50 @@
 
     Returns information about a user.
 
-        <h3>/orgas/</h3>
+    <h3>/user/&lt;id&gt;/techgroups/</h3>
+    <small><i>PlugItAPI.get_user_techgroups(pk)</i></small><br />
+
+    (EBUIo only)
+    Return the list of TechGroup of a user.
+
+    <h3>/orgas/</h3>
     <small><i>PlugItAPI.get_orgas(pk)</i></small><br />
 
     Returns the list of pk/name for all organizations.
 
-        <h3>/orga/&lt;id&gt;</h3>
-        <small><i>PlugItAPI.get_orga(pk)</i></small><br />
+    <h3>/orga/&lt;id&gt;</h3>
+    <small><i>PlugItAPI.get_orga(pk)</i></small><br />
 
     Returns information about an organization.
 
-        <h3>/members/</h3>
-        <small><i>PlugItAPI.get_project_members()</i></small><br />
+    <h3>/members/</h3>
+    <small><i>PlugItAPI.get_project_members()</i></small><br />
 
     Returns the list of members in the project.
 
-        <h3>/mail/</h3>
-        <small><i>PlugItAPI.send_mail(sender, subject, recipients, message, response_id=None)</i></small><br />
+    <h3>/techgroups/</h3>
+    <small><i>PlugItAPI.get_techgroups()</i></small><br />
+
+    (EBUIo only)
+    Return the list of TechGroups
+
+    <h3>/mail/</h3>
+    <small><i>PlugItAPI.send_mail(sender, subject, recipients, message, response_id=None)</i></small><br />
 
     Sends an e-mail with given parameters. If response_id is set, the sender email will be set by the system and recipents replies will be send back to the PlugIt server.
 
-        <hr>
-        <h2>Forums</h2>
-        <h3>/ebuio/forum/</h3>
-        <small><i>PlugItAPI.ebuio_forum(subject, author, message, tags='')</i></small><br />
+    <hr>
+    <h2>Forums</h2>
+    <h3>/ebuio/forum/</h3>
+    <small><i>PlugItAPI.ebuio_forum(subject, author, message, tags='')</i></small><br />
 
     (EBUIo only)
     Create a topic on the project forum with given parameters. Tags is a comma-separated list of tags.
 
     Returns a URL to the topic or the error.
 
-        <h3>/ebuio/forum/search/bytag/&lt;tag&gt;?u=&lt;userPk&gt;</h3>
-        <small><i>PlugItAPI.api_ebuio_forum_get_topics_by_tag_for_user()</i></small><br />
+    <h3>/ebuio/forum/search/bytag/&lt;tag&gt;?u=&lt;userPk&gt;</h3>
+    <small><i>PlugItAPI.api_ebuio_forum_get_topics_by_tag_for_user()</i></small><br />
 
     Returns a list of all the topics in the application forum with the tag passed in the query.
 
